refactor: use associative arrays instead simple arrays as local state

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 }
 
 .App > div {
-  background-color: aquamarine;
+  background-color: #aeb9f3;
   margin-right: 50px;
   padding: 10px;
   border: 2px solid black;
