--- a/src/ToDoList.module.css
+++ b/src/ToDoList.module.css
@@ -1,13 +1,15 @@
 .error {
-  border: red 3px solid;
+  outline: red 1px solid;
+  box-shadow: inset 0 0 1px 2px rgb(204, 0, 0, 0.8)
 }
+
 
 .errorMessage {
   color: red;
 }
 
 .activeFilter {
-  background-color: orangered;
+  background-color: #00ff15;
 }
 
 .isDone {
