refactor wrong imports and actions after changing auth reducer thunks with RTK

--- a/src/app/App.css
+++ b/src/app/App.css
@@ -8,6 +8,13 @@
 .listsWrapper {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: flex-start;
   gap: 80px;
+}
+
+.preloader {
+  position: fixed;
+  top: 30%;
+  text-align: center;
+  width: 100%;
 }
