--- a/src/features/Login/ui/Login.module.css
+++ b/src/features/Login/ui/Login.module.css
@@ -9,3 +9,10 @@
   color: red;
   font-size: 16px;
 }
+
+.title {
+  font-size: 30px;
+  font-weight: bold;
+  text-align: center;
+  margin-top: 0;
+}
